--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
   <meta name="author" content="Kevin Doran">
 
   
-  <meta name="description" content="Kevin Doran
-Engineer and entrepreneur in Tokyo about me I&#8217;m a computer engineer from New Zealand who likes to build novel and useful things. &hellip;">
+  <!--<meta name="description" content="
+                                    Kevin Doran
+Engineer and entrepreneur in Tokyo about me I&#8217;m a computer engineer from New Zealand who likes to build novel and useful things. &hellip;">-->
   
 
   <!-- http://t.co/dKP3o1e -->
@@ -69,7 +70,7 @@ Engineer and entrepreneur in Tokyo about me I&#8217;m a computer engineer from N
         <div class="row">
           <div id="about-me" class="col-md-offset-3 col-md-6">
   <h4>about me</h4>
-  <p>I&#8217;m a computer engineer from New Zealand who likes to build novel and useful things. Tokyo and and Wellington are where I like to be.</p>
+  <!--<p>I&#8217;m a computer engineer from New Zealand who likes to build novel and useful things. Tokyo and and Wellington are where I like to be.</p>-->
   <div class="social-icon-list">
   	
     <a title="Twitter" href="https://twitter.com/kev2d"><img src="/images/glyphicons_social_31_twitter.png"/></a>
