--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Engineer and entrepreneur in Tokyo about me I&#8217;m a computer engineer from N
     <div class="home-page">
   <div class="hero">
     <h1>Kevin Doran</h1>
-<p>Software engineer living in Tokyo</p>
+    <p>An old blog. New blog: <a href="https://blog.kdoran.com/">https://blog.kdoran.com/</a>.</p>
 
   </div>
 
@@ -69,8 +69,8 @@ Engineer and entrepreneur in Tokyo about me I&#8217;m a computer engineer from N
       <div class="container">
         <div class="row">
           <div id="about-me" class="col-md-offset-3 col-md-6">
-  <h4>about me</h4>
-  <!--<p>I&#8217;m a computer engineer from New Zealand who likes to build novel and useful things. Tokyo and and Wellington are where I like to be.</p>-->
+  <!--<h4>about me</h4>
+  <p>I&#8217;m a computer engineer from New Zealand who likes to build novel and useful things. Tokyo and and Wellington are where I like to be.</p>-->
   <div class="social-icon-list">
   	
     <a title="Twitter" href="https://twitter.com/kev2d"><img src="/images/glyphicons_social_31_twitter.png"/></a>
